#2444 Minor code reformatting.